chore: adding swagger and schemas
