# src/domains/posts/DTOs/Post.create.dto.ts
@@ -1,9 +1,7 @@
 export interface PostCreate {
-  id: number;
   title: string;
   slug: string;
   tags: string;
   body: string;
   imagesIds: string[];
-  createdAt: string;
 }
