# src/routes/Posts/PostsRoutes.ts
@@ -5,6 +5,7 @@ import ListAllUseCase from '../../domains/posts/UseCases/ListAllInstrument/listA
 import CreateValidator from '../../domains/posts/Validations/createValidator';
 import ImagePostgresRepository from '../../domains/images/Repositories/ImagePostgresRepository';
 import SlugMaker from '../../domains/posts/UseCases/SlugMaker/SlugMaker';
+import { PostCreate } from '../../domains/posts/DTOs/Post.create.dto';
 
 const router = Router();
 
@@ -25,6 +26,19 @@ const listAllPostsUseCase = new ListAllUseCase(postRepository);
 router.post(
   '/posts',
   async (req: Request, res: Response, next: NextFunction) => {
+    // #swagger.autoBody=true
+    /*
+      #swagger.tags = ['Posts']
+      #swagger.requestBody = {
+        required: true,
+        description: 'Creating new post',
+        schema: {$ref: '#/definitions/PostCreate'}
+      }
+      #swagger.responses[200] = {
+        description: 'New Post',
+        schema: { $ref: '#/definitions/Post' }
+      } 
+    */
     try {
       res.json(await createPostUseCase.execute(req.body));
     } catch (e) {
@@ -36,6 +50,14 @@ router.post(
 router.get(
   '/posts',
   async (req: Request, res: Response, next: NextFunction) => {
+    /*
+      #swagger.tags = ['Posts']
+      #swagger.responses[200] = {
+        description: 'List of Posts',
+        schema: [{ $ref: '#/definitions/Post' }]
+      } 
+    */
+
     try {
       res.json(await listAllPostsUseCase.execute());
     } catch (e) {
